Added dist default config

--- a/config/module.config.php.dist
+++ b/config/module.config.php.dist
@@ -1,7 +1,7 @@
 <?php
 return array(
 		'redbeardopensrs' => array(
-				'hostname'		=> "horizon.opensrs.net",
+				'hostname'		=> 'horizon.opensrs.net',
 				'username' 		=> '',
 				'apikey' 		=> '',
 				'path' 			=> '/',
